# quizzly

./: Dockerfile  LICENSE  Playground_locale.py  README.md  main.py  pyproject.toml  question_generator.py  quizzly.graphml  run.py  update_locales.sh
app/: app.py
app/static/: main.css
app/templates/: base.html  home.html  quiz.html  student_welcome.html  studentlogin.html  teacher_welcome.html
documentation/: design_notes.graphml  ui_flow.graphml
locales/de/LC_MESSAGES/: base.po
locales/en/LC_MESSAGES/: base.po
questions/: question.py  registry.py
questions/math_questions/: sample_questions.py
quiz_app/: __init__.py  config.py  create_database.py  models.py  update_translations.py
quiz_app/main/: routes.py
quiz_app/questions/: routes.py
quiz_app/questions/math_questions/: sample_questions.py
quiz_app/questions/question_types/: question_generator.py
quiz_app/questions/question_types/math_questions/: sample_questions.py
quiz_app/questions/question_types/utils/: question.py  registry.py
quiz_app/quiz/: forms.py  routes.py
quiz_app/static/: main.css
quiz_app/student/: forms.py  routes.py
quiz_app/teacher/: forms.py  routes.py
quiz_app/templates/: about.html  base.html  create_quiz.html  home.html  login.html  question.html  quiz.html  quiz_creation.html  quiz_results.html  student_landing.html  student_quiz_lobby.html  studentlogin.html  teacher_landing.html  teacher_quiz_lobby.html  teacherlogin.html
quiz_app/translations/: compile_translations.py
templates/: index.html
templates_old/: index.html
(+1 files in other folders)
