[tool.poetry]
name = "quizzly"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "BSD 3 clause"

[tool.poetry.dependencies]
python = ">= 3.7.1 <3.10"
numpy = "^1.21.0"
pandas = "^1.3.0"
scipy = "^1.7.0"
sympy = "^1.8"
matplotlib = "^3.4.2"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
